frontend/css/app.css
.place-card {
  cursor: pointer;
}

.place-card:hover {
}

.vcenter {
  display: inline-block;
  vertical-align: middle;
  float: none;
}

.settings-container .cuisine, .settings-container .location-type {
  cursor: pointer;
}

.settings-container .cuisine:hover, .settings-container .location-type:hover {
  opacity: 0.8;
}

.cuisines-container, .location-types-container {
  background-color: #4E5D6C;
  margin: 10px 0px;
  padding: 10px 0px;
}

.fa-spin {
  -webkit-animation: fa-spin 2s infinite linear;
  animation: fa-spin 2s infinite linear;
}
@-webkit-keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}
@keyframes fa-spin {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(359deg);
    transform: rotate(359deg);
  }
}

